service.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: test-app
  namespace: sandbox
  labels:
    run: test-app
spec:  
  type: NodePort
  selector:
    run: test-app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
