ingress.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: test-ingress
  namespace: sandbox
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "test-ip"
#  annotations:
#    kubernetes.io/ingress.allow-http: "false"
spec:  
#  rules:
#  - host: test-app.com
  tls:
#    secretName: test-app.com-ssl
  - secretName: foo-secret 
  backend:
    serviceName: test-app
    servicePort: 8080
